# spec-gen

./: README.md  main.py  pyproject.toml
src/: graph.py  llm_client.py  main.py  math_utils.py  state.py
src/agents/: analyze_agent.py  generate_agent.py  refine_agent.py
src/tools/: run_code.py
src/utils/: run_code.py
