[project]
name = "spec-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.1.3",
    "langsmith[claude-agent-sdk]>=0.7.22",
]
